# parallax-telemetry-playground

./: .dockerignore  .env.example  .gitignore  Cargo.toml  NOTICE  README.md  TOUR.md  VERIFICATION.md  demo.sh  mise.toml
.config/: nextest.toml
.github/: AGENTS.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: console_sim.rs  main.rs  shapes.rs  test_report.rs  test_verify.rs
cli/tests/: parameterized.rs
deploy/: Dockerfile.java  Dockerfile.rust  Dockerfile.web  docker-compose.limits.yml  docker-compose.xlang.yml  docker-compose.yml
docs/: corner-case-matrix.md  execution-stack-design.md  frontend-telemetry-contract.md  semconv-registry-inventory.md  telemetry-events.md
fixtures/: semconv-wire-contract.json
flags/: flagd.json
graphql/: catalog.graphqls
libs/playground-telemetry/: Cargo.toml
libs/playground-telemetry/src/: feature_flags.rs  invocation.rs  lib.rs  propagation.rs  semconv.rs
libs/playground-telemetry/tests/: business_baggage.rs
loadgen/: checkout.js  checkout.ts  demo.js  demo.ts
proto/: Cargo.toml  build.rs  pricing.proto
proto/src/: lib.rs
releases/: README.md
scenarios/: README.md  a-breach-error-rate.sh  a-breach-p95.sh  a-recover.sh  a1-checkout.sh  a10-baggage.sh  a12-cli-run.sh  a13-deploy-regression.sh  a14-flag-flip.sh  a18-canary.sh  a19-long-trace.sh  a2-exemplars.sh  a20-batch-fanin.sh  a20-compare-pair.sh  a22-tokio-saturation.sh  a23-storefront-grpc.sh  a24-storefront-catalog.sh  a25-postgres.sh  a26-cache.sh  a27-execution-stack.sh  a28-rum-journey.sh  a29-typed-events.sh  a3-async.sh  a4-reverse.sh  a5-rum-error.sh  a6-graphql.sh  a7-subscription.ts  a7b-grpc-stream.sh  a8-java-async.sh  a9-field-spike.sh  b-async-chaos.sh  b-chaos.sh  b-checkout-chaos.sh  b-degradation.sh  b10-lock-contention.sh  b13-slow-recommendation.sh  b15-rage-click.sh  b16-load.sh  b17-cron.sh  b17b-cron-suite.sh  (+11 more)
scripts/: check-scenarios.sh  check-typescript-policy.sh  observable-test-session.sh  webhook-listener.sh
services/catalog/: build.gradle.kts
services/catalog/src/main/java/dev/tailrocks/catalog/: CatalogApplication.java  Semconv.java
services/catalog/src/main/resources/: application.yml  schema.sql
services/catalog/src/main/resources/graphql/: schema.graphqls
services/catalog/src/test/java/dev/tailrocks/catalog/: CatalogGraphQlSliceTest.java  ProductControllerTest.java  SemconvWireContractTest.java
services/checkout/: Cargo.toml
services/checkout/src/: main.rs
services/fulfillment/: README.md  build.gradle.kts
services/fulfillment/src/main/java/dev/tailrocks/fulfillment/: FulfillmentApplication.java
services/fulfillment/src/main/resources/: application.yml
services/fulfillment/src/test/java/dev/tailrocks/fulfillment/: OrderConsumerTest.java  OrderProducerTest.java
services/inventory/: Cargo.toml
services/inventory/src/: main.rs
services/notifications/: Cargo.toml
services/notifications/src/: main.rs
services/orders/: Cargo.toml
services/orders/src/: main.rs
services/payment/: README.md  build.gradle.kts
services/payment/gradle/wrapper/: gradle-wrapper.properties
services/payment/src/main/java/dev/tailrocks/payment/: PaymentApplication.java  Semconv.java
services/payment/src/main/resources/: application.yml
services/payment/src/test/java/dev/tailrocks/payment/: PaymentGrpcTransportTest.java  PaymentPricingServiceTest.java  TestTelemetryAcceptanceTest.java
services/pricing/: Cargo.toml
services/pricing/src/: main.rs
services/recommendation/: Cargo.toml
services/recommendation/src/: main.rs
services/semconv/src/main/java/io/tailrocks/semconv/: Semconv.java
services/semconv/src/main/java/io/tailrocks/testsupport/: OpenTelemetryTestExtension.java
services/storefront/: Cargo.toml
services/storefront/src/: main.rs
web/: .gitignore  README.md  index.html  package.json  playwright.config.ts  server.mjs  server.ts  tsconfig.json  vite.config.ts
web/e2e/: fixtures.ts  journey.spec.ts  telemetry-reporter.ts  test-trace-context.ts
web/src/: client.tsx  instrument.client.ts  main.tsx  router.tsx  rum.test.ts  rum.ts  semconv.test.ts  semconv.ts  telemetry.ts  test-trace-context.test.ts  traceparent.test.ts  traceparent.ts
web/src/routes/: __root.tsx  checkout.tsx  index.tsx  orders.tsx  v1.logs.ts  v1.traces.ts
