[workspace]
resolver = "3"
members = [
    "libs/playground-telemetry",
    "proto",
    "services/checkout",
    "services/pricing",
    "services/inventory",
    "services/recommendation",
    "services/notifications",
    "services/orders",
    "cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Tailrocks"]
repository = "https://github.com/tailrocks/parallax-telemetry-playground"

[workspace.dependencies]
playground-telemetry = { path = "libs/playground-telemetry" }
playground-proto = { path = "proto" }

anyhow = "1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
tokio-stream = "0.1"
prost = "0.13"
tonic-build = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.31"
opentelemetry = "0.30"
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic", "trace"] }
opentelemetry-semantic-conventions = "0.30"
sentry = "0.34"
sentry-tracing = "0.34"
