[workspace]
resolver = "3"
members = [
    "libs/playground-telemetry",
    "proto",
    "services/checkout",
    "services/pricing",
    "services/inventory",
    "services/recommendation",
    "services/notifications",
    "services/orders",
    "services/storefront",
    "cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Tailrocks"]
repository = "https://github.com/tailrocks/parallax-telemetry-playground"

[workspace.dependencies]
playground-telemetry = { path = "libs/playground-telemetry" }
playground-proto = { path = "proto" }

anyhow = "1"
axum = "0.8"
http = "1"
tokio = { version = "1", features = ["full"] }
tokio-metrics = "0.5"
tonic = "0.14"
tonic-prost = "0.14"
tokio-stream = { version = "0.1", features = ["net"] }
prost = "0.14"
tonic-prost-build = "0.14"
reqwest = { version = "0.13", default-features = false, features = ["json", "native-tls", "http2"] }
# In-network Postgres is plaintext. If TLS is ever needed, use sqlx's
# `tls-native-tls` feature; never rustls in this repo.
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "postgres", "macros"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.33"
opentelemetry = "0.32"
opentelemetry-http = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["grpc-tonic", "trace", "logs", "metrics"] }
opentelemetry-appender-tracing = "0.32"
opentelemetry-semantic-conventions = "0.32"
open-feature = "0.3.0"
# Checkout uses the RPC resolver. open-feature-flagd 0.2.1 still needs
# `in-process` enabled because its shared error type references
# flagd_evaluation_engine without a feature guard.
open-feature-flagd = { version = "0.2.1", default-features = false, features = ["rpc", "in-process"] }
sentry = "0.48"
sentry-tracing = "0.48"
tower-http = { version = "0.6", features = ["cors"] }
tower = { version = "0.5", features = ["util"] }
futures = "0.3"
juniper = "0.17.1"
juniper_axum = { version = "0.3.0", features = ["subscriptions"] }
juniper_graphql_ws = { version = "0.5.0", features = ["graphql-transport-ws", "graphql-ws"] }
quick-xml = "0.38"
