[package]
name = "playground-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "playground"
path = "src/main.rs"

[dependencies]
playground-telemetry = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
quick-xml = { workspace = true }
opentelemetry = { workspace = true }
