[package]
name = "playground-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "playground"
path = "src/main.rs"

[dependencies]
playground-telemetry = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
quick-xml = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-proto = { workspace = true }
prost = { workspace = true }

[dev-dependencies]
libtest-mimic = "0.8.2"

# Parameterized-name coverage: rustc test fn paths cannot carry `[…]`
# parameter suffixes, so the parameterized-test contract fixture uses a
# custom harness that registers bracketed case names (converted to
# `test.case.parameters` by `playground test-report`).
[[test]]
name = "parameterized"
harness = false
