[package]
name = "checkout"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
playground-telemetry = { workspace = true }
playground-proto = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tokio-stream = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
open-feature = { workspace = true }
open-feature-flagd = { workspace = true }
