[package]
name = "inventory"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
playground-telemetry = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
opentelemetry = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
reqwest = { workspace = true }
