[package]
name = "notifications"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
playground-telemetry = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tower = { workspace = true }
