[package]
name = "orders"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
playground-telemetry = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
