[package]
name = "recommendation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
playground-telemetry = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
opentelemetry = { workspace = true }
